# NineOS

./: .gitignore  .gitmodules  CMakeLists.txt  NineOS.code-workspace  README (2).md  README.md  config.nims  firmware.nimble  sdkconfig
.devcontainer/: Dockerfile  devcontainer.json
firmware/: firmware.nimble  sdkconfig.old
firmware/main/: CMakeLists.txt  main.nim
firmware/src/firmware/: submodule.nim
firmware/tests/: test1.nim
main/: CMakeLists.txt  main.nim  nim.cfg
main/lib/: m5gfx.nim  m5unified.nim
